--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -87,6 +87,7 @@ border-color: #d6e9c6;
 .alert-gray {
   background-color: #f2f3f2;
   border-color: #f2f3f2;
+  opacity: 0.85;
 }
 
 @media print {
